# ms-rust

./: .env.local  Cargo.toml  Makefile  README.md
bins/consumers/: Cargo.toml
bins/consumers/src/: main.rs
bins/consumers/src/consumer/: mod.rs  process.rs
services/: Cargo.toml
services/src/: lib.rs
services/src/amqp/: consumer.rs  dispatcher.rs  errors.rs  handler.rs  mod.rs  queue.rs  rabbitmq.rs  traits.rs
services/src/envs/: config_env.rs  mod.rs
services/src/envs/configs/: amqp.rs  config.rs  mod.rs
services/src/messages/: mod.rs  process_data_msg.rs
