[workspace]
resolver = "2"

members = ["bins/consumers","bins/grpc", "services"]

default-members = ["bins/grpc", "bins/consumers"]

[workspace.dependencies]
lapin = "2.3.4"
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.38.0", features = ["full"] }
futures-lite = "2.3.0"