[workspace]
resolver = "2"

members = ["bins/consumers","bins/grpc", "services"]

default-members = ["bins/grpc", "bins/consumers"]

[workspace.dependencies]
lapin = "2.3.4"
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.38.0", features = ["full"] }
futures-lite = "2.3.0"
thiserror = "1.0.61"
async-trait = "0.1.80"
serde = "1.0.203"
serde_json = "1.0.117"